Fixed addon migration leftovers

--- a/padogrid-deployment/src/main/resources/geode/docker/compose/template-server-docker-compose.yaml
+++ b/padogrid-deployment/src/main/resources/geode/docker/compose/template-server-docker-compose.yaml
@@ -38,7 +38,7 @@
             --statistic-archive-file=/padogrid/stats/`hostname`.gfs \
             --start-rest-api=true \
             --http-service-port=${HTTP_PORT} \
-            --J=-Dpadogrid.server.port=${SERVER_PORT} \
+            --J=-Dgeode-addon.server.port=${SERVER_PORT} \
             --J=-Dlog4j.configurationFile=/padogrid/etc/log4j2.properties \
             --J=-Dcom.sun.management.jmxremote.port=$JMX_PORT \
             --J=-Dcom.sun.management.jmxremote.ssl=false \
