--- a/padogrid-deployment/src/main/resources/geode/k8s/kustom/etc/geode/base/server-ss.yaml
+++ b/padogrid-deployment/src/main/resources/geode/k8s/kustom/etc/geode/base/server-ss.yaml
@@ -67,10 +67,6 @@ spec:
     spec:
       containers:
       - name: server
-        #image: javapark07/geode:v4
-        #command: ["/startServer.sh"]
-              #              --initial-heap=1g
-              #--max-heap=1g
         image: apachegeode/geode:latest
         command:
         - sh
@@ -84,7 +80,7 @@ spec:
               --disable-default-server=true \
               --hostname-for-clients=minikube \
               --cache-xml-file=/data/custom/etc/cache.xml \
-              --J=-Dpadohub.server.port=40404 \
+              --J=-Dgeode-addon.server.port=40404 \
               --J=-javaagent:/data/custom/plugins/v1/jmx_prometheus_javaagent-0.11.0.jar=8080:/data/custom/etc/prometheus.yml \
               --J=-Dcom.sun.management.jmxremote.port=1099 \
               --J=-Dcom.sun.management.jmxremote.ssl=false \
