--- a/padogrid-deployment/src/main/resources/hazelcast/apps/jet_demo/pom.xml
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/jet_demo/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.hazelcast.addon</groupId>
 		<artifactId>padohub-parent</artifactId>
-		<version>0.9.1</version>
+		<version>0.9.2-SNAPSHOT</version>
 	</parent>
 	<artifactId>padohub-jet-demo</artifactId>
 	<name>padohub-jet-demo</name>
