--- a/hazelcast-addon-core-3/pom.xml
+++ b/hazelcast-addon-core-3/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.2-SNAPSHOT</version>
+		<version>0.9.1</version>
 	</parent>
 	<artifactId>hazelcast-addon-core-3</artifactId>
 	<packaging>jar</packaging>
