Added support for SnappyData docker

--- a/pom.xml
+++ b/pom.xml
@@ -95,11 +95,13 @@
 		</pluginManagement>
 	</build>
 	<modules>
+		<module>padogrid-common</module>
 		<module>geode-addon-core</module>
 		<module>hazelcast-addon-common</module>
 		<module>hazelcast-addon-core-3</module>
 		<module>hazelcast-addon-core-4</module>
 		<module>hazelcast-addon-jet-demo</module>
+		<module>snappydata-addon-core</module>
 		<module>padogrid-deployment</module>
 	</modules>
 </project>
