--- a/padogrid-deployment/src/main/resources/snappydata/docker/compose/template-server-docker-compose.yaml
+++ b/padogrid-deployment/src/main/resources/snappydata/docker/compose/template-server-docker-compose.yaml
@@ -6,11 +6,11 @@
      - locator
     expose:
      - "$CLIENT_PORT"
+     - "$THRIFT_SERVER_PORT"
      - "$JMX_PORT"
      - "$DEBUG_PORT"
      - "$PROMETHEUS_PORT"
     ports:
-     - "${HOST_CLIENT_PORT}:$CLIENT_PORT"
      - "${HOST_JMX_PORT}:$JMX_PORT"
      - "${HOST_DEBUG_PORT}:$DEBUG_PORT"
      - "${HOST_PROMETHEUS_PORT}:$PROMETHEUS_PORT"
@@ -22,5 +22,5 @@
       - |
         export LOG_FILE=/padogrid/log/`hostname`.log \
         && \
-        start server -name=`hostname` -locators=locator:$LOCATOR_PORT -hostname-for-clients=$HOSTNAME_FOR_CLIENTS -classpath=/padogrid/plugins/*:/padogrid/lib/* -log-file=/padogrid/log/`hostname`.log -member-timeout=250000 -run-netserver=true -thrift-server-port=$CLIENT_PORT -spark.ui.port=$SPARK_UI_PORT -heap-size=$HEAP_SIZE -statistic-archive-file=/padogrid/stats/`hostname`.gfs -J-Dlog4j.configurationFile=/padogrid/etc/log4j2.properties -J-Xloggc:/padogrid/log/`hostname`-gc.log -J-XX:+PrintGCDetails -J-XX:+PrintGCDateStamps -J-DgemfirePropertyFile=/padogrid/etc/gemfirexd.properties -J-javaagent:/padogrid/lib/${PROMETHEUS_JAR}=$PROMETHEUS_PORT:/padogrid/etc/prometheus.yml -client-port=$CLIENT_PORT
+        start server -name=`hostname` -locators=locator:$LOCATOR_PORT -classpath=/padogrid/plugins/*:/padogrid/lib/* -log-file=/padogrid/log/`hostname`.log -member-timeout=120000 -thrift-server-port=$THRIFT_SERVER_PORT -spark.ui.port=$SPARK_UI_PORT -heap-size=$HEAP_SIZE -statistic-archive-file=/padogrid/stats/`hostname`.gfs -J-Dlog4j.configurationFile=/padogrid/etc/log4j2.properties -J-Xloggc:/padogrid/log/`hostname`-gc.log -J-XX:+PrintGCDetails -J-XX:+PrintGCDateStamps -J-DgemfirePropertyFile=/padogrid/etc/gemfirexd.properties -J-javaagent:/padogrid/lib/${PROMETHEUS_JAR}=$PROMETHEUS_PORT:/padogrid/etc/prometheus.yml -client-port=$CLIENT_PORT
     restart: on-failure
