Added selector to management-center-volume

--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/ocp/etc/hazelcast/hazelcast-enterprise.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/ocp/etc/hazelcast/hazelcast-enterprise.yaml
@@ -196,6 +196,9 @@ objects:
   metadata:
     name: management-center-volume
   spec:
+    selector:
+      app: hazelcast
+      role: hazelcast
     accessModes:
     - ReadWriteOnce
     resources:
