--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/ocp/etc/hazelcast/hazelcast-enterprise-rhel.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/ocp/etc/hazelcast/hazelcast-enterprise-rhel.yaml
@@ -198,6 +198,9 @@ objects:
   metadata:
     name: management-center-volume
   spec:
+    selector:
+      app: hazelcast
+      role: hazelcast
     accessModes:
     - ReadWriteOnce
     resources:
