Renamed padohub to padogrid

--- a/padogrid-deployment/src/main/resources/hazelcast/apps/jet_demo/pom.xml
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/jet_demo/pom.xml
@@ -6,11 +6,11 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.hazelcast.addon</groupId>
-		<artifactId>padohub-parent</artifactId>
+		<artifactId>padogrid-parent</artifactId>
 		<version>0.9.2-SNAPSHOT</version>
 	</parent>
-	<artifactId>padohub-jet-demo</artifactId>
-	<name>padohub-jet-demo</name>
+	<artifactId>padogrid-jet-demo</artifactId>
+	<name>padogrid-jet-demo</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
