--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/pom.xml
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/pom.xml
@@ -6,9 +6,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.hazelcast.addon</groupId>
 	<version>0.9.2-SNAPSHOT</version>
-	<artifactId>padohub-perf_test</artifactId>
+	<artifactId>padogrid-perf_test</artifactId>
 	<packaging>pom</packaging>
-	<name>padohub-perf_test</name>
+	<name>padogrid-perf_test</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
