Added OpenShift support for Hazelcast.

--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/kustom/etc/hazelcast/overlay-base/kustomization.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/kustom/etc/hazelcast/overlay-base/kustomization.yaml
@@ -6,6 +6,7 @@ bases:
 
 patchesStrategicMerge:
 - configmap.yaml
+- mc-pvc.yaml
 - statefulset.yaml
 - mc-statefulset.yaml
 - hazelcast-hpa-custom.yaml
