--- a/hazelcast-addon-jet-demo-3/pom.xml
+++ b/hazelcast-addon-jet-demo-3/pom.xml
@@ -9,8 +9,8 @@
 		<artifactId>padogrid-parent</artifactId>
 		<version>0.9.2-SNAPSHOT</version>
 	</parent>
-	<artifactId>hazelcast-addon-jet-demo</artifactId>
-	<name>hazelcast-addon-jet-demo</name>
+	<artifactId>hazelcast-addon-jet-demo-3</artifactId>
+	<name>${project.artifactId}</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
