--- a/padogrid-deployment/src/main/resources/hazelcast/apps/jet_demo/pom.xml
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/jet_demo/pom.xml
@@ -4,19 +4,29 @@
 	xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<groupId>org.hazelcast.addon</groupId>
-		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.2-SNAPSHOT</version>
-	</parent>
+	<groupId>org.hazelcast.addon</groupId>
 	<artifactId>padogrid-jet-demo</artifactId>
 	<name>padogrid-jet-demo</name>
+	<version>0.9.2-SNAPSHOT</version>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<jet.version>3.2</jet.version>
 		<skipTests>true</skipTests>
 	</properties>
+
+	<repositories>
+		<repository>
+			<id>Hazelcast Private Snapshot Repository</id>
+			<url>https://repository.hazelcast.com/snapshot/</url>
+		</repository>
+		<repository>
+			<id>Hazelcast Private Release Repository</id>
+			<url>https://repository.hazelcast.com/release/</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>com.hazelcast.jet</groupId>
