--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/kustom/etc/custom-metrics/prometheus/prometheus-dep.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/kustom/etc/custom-metrics/prometheus/prometheus-dep.yaml
@@ -19,12 +19,13 @@ spec:
       serviceAccountName: prometheus
       containers:
       - name: prometheus
-        image: prom/prometheus:v2.1.0
+        image: prom/prometheus:v2.18.1
         imagePullPolicy: Always
         command:
           - prometheus
           - --config.file=/etc/prometheus/prometheus.yml
           - --storage.tsdb.retention=1h
+          - --storage.tsdb.path=/prometheus-data
         ports:
         - containerPort: 9090
           protocol: TCP
@@ -32,6 +33,8 @@ spec:
           limits:
             memory: 2Gi
         volumeMounts:
+        - name: data
+          mountPath: /prometheus-data
         - mountPath: /etc/prometheus/prometheus.yml
           name: prometheus-config
           subPath: prometheus.yml
@@ -43,3 +46,6 @@ spec:
               - key: prometheus.yml
                 path: prometheus.yml
                 mode: 0644
+        - name: data
+          persistentVolumeClaim:
+            claimName: prometheus-pvc
