--- a/hazelcast-addon-core-4/pom.xml
+++ b/hazelcast-addon-core-4/pom.xml
@@ -1,7 +1,5 @@
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -35,6 +33,13 @@
 	</repositories>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>padogrid.addon</groupId>
+			<artifactId>hazelcast-addon-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+
 		<!-- Hazelcast -->
 		<dependency>
 			<groupId>com.hazelcast</groupId>
@@ -103,6 +108,13 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.9.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.debezium/debezium-core -->
+		<dependency>
+			<groupId>io.debezium</groupId>
+			<artifactId>debezium-core</artifactId>
+			<version>1.0.3.Final</version>
 		</dependency>
 
 	</dependencies>
