--- a/hazelcast-addon-common/pom.xml
+++ b/hazelcast-addon-common/pom.xml
@@ -35,6 +35,13 @@
 	</repositories>
 
 	<dependencies>
+		<!-- PadoGrid -->
+		<dependency>
+			<groupId>padogrid.addon</groupId>
+			<artifactId>padogrid-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		
 		<!-- Hazelcast -->
 		<dependency>
 			<groupId>com.hazelcast</groupId>
@@ -103,6 +110,13 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.9.1</version>
+		</dependency>
+		
+		<!-- Kryo -->
+		<dependency>
+			<groupId>com.esotericsoftware</groupId>
+			<artifactId>kryo</artifactId>
+			<version>4.0.0</version>
 		</dependency>
 
 	</dependencies>
