--- a/hazelcast-addon-core-4/pom.xml
+++ b/hazelcast-addon-core-4/pom.xml
@@ -17,18 +17,19 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<hazelcast.version>4.0</hazelcast.version>
 		<spring.version>5.2.1.RELEASE</spring.version>
+		<avro.version>1.9.2</avro.version>
 		<skipTests>true</skipTests>
 	</properties>
 
 	<repositories>
 		<!-- Hazelcast private repo -->
 		<repository>
-			<id>Hazelcast Private Snapshot Repository</id>
-			<url>https://repository.hazelcast.com/snapshot/</url>
-		</repository>
-		<repository>
 			<id>Hazelcast Private Release Repository</id>
 			<url>https://repository.hazelcast.com/release/</url>
+		</repository>
+		<repository>
+			<id>confluent</id>
+			<url>http://packages.confluent.io/maven/</url>
 		</repository>
 	</repositories>
 
@@ -36,16 +37,16 @@
 
 		<dependency>
 			<groupId>padogrid.addon</groupId>
+			<artifactId>padogrid-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>padogrid.addon</groupId>
 			<artifactId>hazelcast-addon-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 
 		<!-- Hazelcast -->
-		<dependency>
-			<groupId>com.hazelcast</groupId>
-			<artifactId>hazelcast-all</artifactId>
-			<version>${hazelcast.version}</version>
-		</dependency>
 		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast-enterprise-all</artifactId>
@@ -114,9 +115,34 @@
 		<dependency>
 			<groupId>io.debezium</groupId>
 			<artifactId>debezium-core</artifactId>
-			<version>1.0.3.Final</version>
+			<version>1.2.0.Final</version>
 		</dependency>
 
+		<!-- Avro -->
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro</artifactId>
+			<version>${avro.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro-tools</artifactId>
+			<version>${avro.version}</version>
+		</dependency>
+
+		<!-- Confluent Kafka Connect Avro -->
+		<dependency>
+			<groupId>io.confluent</groupId>
+			<artifactId>kafka-connect-avro-data</artifactId>
+			<version>5.5.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20200518</version>
+		</dependency>
 	</dependencies>
 
 	<build>
