Added Avro schema generator.

--- a/hazelcast-addon-common/pom.xml
+++ b/hazelcast-addon-common/pom.xml
@@ -1,7 +1,5 @@
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
@@ -37,7 +35,7 @@
 			<artifactId>padogrid-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<!-- Hazelcast -->
 		<dependency>
 			<groupId>com.hazelcast</groupId>
@@ -102,7 +100,7 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.9.1</version>
 		</dependency>
-		
+
 		<!-- Kryo -->
 		<dependency>
 			<groupId>com.esotericsoftware</groupId>
@@ -110,6 +108,19 @@
 			<version>4.0.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20200518</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
+		<dependency>
+			<groupId>org.apache.httpcomponents.client5</groupId>
+			<artifactId>httpclient5</artifactId>
+			<version>5.0.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
