--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
 	</build>
 	<modules>
 		<module>padogrid-common</module>
+		<module>padogrid-tools</module>
 		<!-- Leave out Coherence. It must be built separately due to the lack of public Maven support.
 		See pom-include-coherence.xml -->
 		<!-- <module>coherence-addon-core</module> -->
