Set totalInvocationCount to 100.

--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-factory-er.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-factory-er.properties
@@ -78,7 +78,7 @@ g2.threadCount=1
 g2.operations=set2
 g2.comment=Stores Order objects into nw/orders. This test case is for ER ingestion only.
 # Set totalInvocationCount to 0 to skip this test case. It is for ER only. See g1.
-g2.totalInvocationCount=0
+g2.totalInvocationCount=100
 
 # -------------------------------------------------------------------------
 # Operations:
