Updated build to generate 'all' dependencies

--- a/padogrid-deployment/pom.xml
+++ b/padogrid-deployment/pom.xml
@@ -34,7 +34,7 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.11.2</version>
 		</dependency>
-		
+
 		<!-- padogrid-tools -->
 		<dependency>
 			<groupId>com.esotericsoftware</groupId>
@@ -87,7 +87,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<!-- Additional padogrid assemblies -->
 			<plugin>
 				<groupId>com.soebes.maven.plugins</groupId>
@@ -95,7 +95,7 @@
 				<version>0.3</version>
 				<executions>
 					<execution>
-						<id>hazelcast-addon-additions</id>
+						<id>padogrid-additions</id>
 						<phase>package</phase>
 						<goals>
 							<goal>iterator</goal>
@@ -115,7 +115,7 @@
 										<descriptors>
 											<descriptor>${project.basedir}/src/main/assembly/${item}.xml</descriptor>
 										</descriptors>
-										<finalName>${item}</finalName>
+										<finalName>${item}-${project.version}</finalName>
 										<appendAssemblyId>false</appendAssemblyId>
 										<outputDirectory>target/assembly</outputDirectory>
 										<tarLongFileMode>gnu</tarLongFileMode>
@@ -150,6 +150,7 @@
 					</execution>
 				</executions>
 			</plugin>
+
 		</plugins>
 	</build>
 </project>
