Fixed irregular lines in group-put properties

--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-put.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-put.properties
@@ -23,6 +23,7 @@ testIntervalInMsec=0
 # Print status interval in sec. The application prints status in this interval
 # to the console.
 # Default: 10 sec
+printStatusIntervalInSec=10
 
 # Turn off logging (recommended)
 hazelcast.logging.type=none
@@ -132,15 +133,14 @@ g1.totalInvocationCount=1000
 #      -----  ---------  ----------  ---------
 # Total:  22  1,610,000         N/A      12.93
 # -------------------------------------------------------------------------
- 
+
 put1.map=map1
 put1.testCase=putall
 put1.totalEntryCount=1000000
 put1.payloadSize=1024
-put1.batchSize=1000                                                                                
-put1.key.prefix=a                                                                                  
-put1.key.startNum=1                                                                                
-                                                                                                   
+put1.key.prefix=a
+put1.key.startNum=1
+
 put2.ref=put1
 put2.map=map2
 
@@ -163,10 +163,10 @@ put8.ref=put1
 put8.map=map8
 
 put9.ref=put1
-put9.map=map9                                                                                      
+put9.map=map9
 
 put10.ref=put1
-put10.map=map10                                                                                    
+put10.map=map10
 
 put11.map=map11
 put11.testCase=putall
