--- a/padogrid-geode-all/pom.xml
+++ b/padogrid-geode-all/pom.xml
@@ -17,7 +17,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.3-SNAPSHOT</version>
+		<version>0.9.3</version>
 	</parent>
 	<artifactId>padogrid-geode-all</artifactId>
 	<packaging>jar</packaging>
