--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/padogrid/padogrid-no-pvc.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/padogrid/padogrid-no-pvc.yaml
@@ -25,7 +25,7 @@ objects:
           name: ${APP_NAME}
       spec:
         containers:
-        - image: docker.io/padogrid/padogrid
+        - image: docker.io/padogrid/padogrid:latest
           name: padogrid
           env:
           - name: NAMESPACE
