--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/padogrid/padogrid.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/padogrid/padogrid.yaml
@@ -48,7 +48,7 @@ objects:
           runAsGroup: 1001
           fsGroup: 1001
         containers:
-        - image: docker.io/padogrid/padogrid
+        - image: docker.io/padogrid/padogrid:latest
           name: padogrid
           volumeMounts:
           - mountPath: /opt/padogrid/workspaces
