--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/hazelcast/wan/hazelcast-enterprise.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/hazelcast/wan/hazelcast-enterprise.yaml
@@ -12,7 +12,7 @@ labels:
 parameters:
 - name: HAZELCAST_IMAGE
   description: "Defines the location of Hazelcast image"
-  value: hazelcast/hazelcast:4.0
+  value: hazelcast/hazelcast-enterprise:4.0
   required: true
 - name: SERVICE_NAME
   description: "Defines the service name of the POD to lookup of Kubernetes"
@@ -24,7 +24,18 @@ parameters:
 - name: HAZELCAST_REPLICAS
   description: "Number of Hazelcast members"
   value : "3"
+  required: true
+- name: ENTERPRISE_LICENSE_KEY
+  description: "Defines Hazelcast Enterprise License Key, please enter your License"
   required": true
+- name: MANAGEMENT_CENTER_IMAGE
+  description: "Defines the location of Hazelcast Management Center image"
+  value: hazelcast/management-center:4.0
+  required: true
+- name: MANAGEMENT_CENTER_SERVICE_NAME
+  description: "Defines the service name of Management Center"
+  value: management-center-service
+  required: true
 
 objects:
 - apiVersion: v1
@@ -56,34 +67,34 @@ objects:
               DATA:
                 enabled: true
         wan-replication:
-          wan1-to-wan2-merkle:
+          wan-merkle:
             batch-publisher:
               dev:
-                target-endpoints: hazelcast-service-lb-wan2.apps-crc.testing:30000
+                target-endpoints: ${WAN_TARGET_ENDPONTS}
                 sync:
                   consistency-check-strategy: MERKLE_TREES
         map:
           eligibility:
             wan-replication-ref:
-              wan1-to-wan2-merkle: {}
+              wan-merkle: {}
             merkle-tree:
               enabled: true
               depth: 10
           profile:
             wan-replication-ref:
-              wan1-to-wan2-merkle: {}
+              wan-merkle: {}
             merkle-tree:
               enabled: true
               depth: 10
           nw/customers:
             wan-replication-ref:
-              wan1-to-wan2-merkle: {}
+              wan-merkle: {}
             merkle-tree:
               enabled: true
               depth: 10
           nw/orders:
             wan-replication-ref:
-              wan1-to-wan2-merkle: {}
+              wan-merkle: {}
             merkle-tree:
               enabled: true
               depth: 10
@@ -95,14 +106,16 @@ objects:
     labels:
       app: hazelcast
   spec:
-    replicas: 3 
+    replicas: 3
     selector:
       matchLabels:
         app: hazelcast
+        role: hazelcast
     template:
       metadata:
         labels:
           app: hazelcast
+          role: hazelcast
       spec:
         containers:
         - name: hazelcast-openshift
@@ -134,8 +147,10 @@ objects:
           env:
           - name: HAZELCAST_KUBERNETES_SERVICE_DNS
             value: ${SERVICE_NAME}.${NAMESPACE}.svc.cluster.local
+          - name: HZ_LICENSE_KEY
+            value: ${ENTERPRISE_LICENSE_KEY}
           - name: JAVA_OPTS
-            value: "-Dhazelcast.config=/data/hazelcast/hazelcast.yaml"
+            value: "-Dhazelcast.config=/data/hazelcast/hazelcast.yaml -Dnamespace=${NAMESPACE}"
         volumes:
         - name: hazelcast-storage
           configMap:
@@ -150,6 +165,88 @@ objects:
     clusterIP: None
     selector:
       app: hazelcast
+      role: hazelcast
     ports:
     - protocol: TCP
       port: 5701
+
+- kind: PersistentVolumeClaim
+  apiVersion: v1
+  metadata:
+    name: management-center-volume
+  spec:
+    accessModes:
+    - ReadWriteOnce
+    resources:
+      requests:
+        storage: 1Gi
+
+- apiVersion: apps/v1
+  kind: Deployment
+  metadata:
+    name: management-center
+    labels:
+      app: hazelcast
+  spec:
+    replicas: 1
+    selector:
+      matchLabels:
+        app: hazelcast
+        role: mancenter
+    template:
+      metadata:
+        labels:
+          app: hazelcast
+          role: mancenter
+      spec:
+        containers:
+        - name: management-center
+          image: ${MANAGEMENT_CENTER_IMAGE}
+          resources:
+            limits:
+              memory: 1Gi
+          ports:
+          - name: mancenter
+            containerPort: 8080
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 15
+            successThreshold: 1
+            failureThreshold: 10
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 30
+            periodSeconds: 10
+            timeoutSeconds: 15
+            successThreshold: 1
+            failureThreshold: 10
+          volumeMounts:
+          - name: mancenter-storage
+            mountPath: /data
+          env:
+          - name: MC_INIT_CMD
+            value: "./mc-conf.sh cluster add -H /data -cn dev -ma ${SERVICE_NAME}.${NAMESPACE}.svc.cluster.local"
+        volumes:
+        - name: mancenter-storage
+          persistentVolumeClaim:
+            claimName: management-center-volume
+
+- apiVersion: v1
+  kind: Service
+  metadata:
+    name: ${MANAGEMENT_CENTER_SERVICE_NAME}
+  spec:
+    type: ClusterIP
+    clusterIP: None
+    selector:
+      app: hazelcast
+      role: mancenter
+    ports:
+    - protocol: TCP
+      port: 8080
