--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/hazelcast/wan/hazelcast-enterprise.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/hazelcast/wan/hazelcast-enterprise.yaml
@@ -12,7 +12,7 @@ labels:
 parameters:
 - name: HAZELCAST_IMAGE
   description: "Defines the location of Hazelcast image"
-  value: hazelcast/hazelcast-enterprise:4.0
+  value: hazelcast/hazelcast-enterprise:latest
   required: true
 - name: SERVICE_NAME
   description: "Defines the service name of the POD to lookup of Kubernetes"
@@ -30,7 +30,7 @@ parameters:
   required": true
 - name: MANAGEMENT_CENTER_IMAGE
   description: "Defines the location of Hazelcast Management Center image"
-  value: hazelcast/management-center:4.0
+  value: hazelcast/management-center:latest
   required: true
 - name: MANAGEMENT_CENTER_SERVICE_NAME
   description: "Defines the service name of Management Center"
@@ -105,6 +105,7 @@ objects:
     name: hazelcast
     labels:
       app: hazelcast
+      role: hazelcast
   spec:
     replicas: 3
     selector:
