--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/padogrid/padogrid.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/padogrid/padogrid.yaml
@@ -3,6 +3,7 @@ kind: Template
 labels:
   template: padogrid-persistent-template
   app: ${APP_NAME}
+  role: hazelcast
 metadata:
   annotations:
     description: PadoGrid persistent volume and claim.
@@ -83,4 +84,4 @@ parameters:
   displayName: Hazelcast service
   name: HAZELCAST_SERVICE
   required: false
-  value: oc-helm-hazelcast-enterprise
+  value: hazelcast
