--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/hazelcast/hazelcast-enterprise-rhel.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/hazelcast/hazelcast-enterprise-rhel.yaml
@@ -54,7 +54,17 @@ objects:
           rest-api:
             enabled: true
             endpoint-groups:
+              CLUSTER_READ:
+                enabled: true
+              CLUSTER_WRITE:
+                enabled: true
               HEALTH_CHECK:
+                enabled: true
+              HOT_RESTART:
+                enabled: true
+              WAN:
+                enabled: false
+              DATA:
                 enabled: true
 
 - apiVersion: apps/v1
@@ -63,6 +73,7 @@ objects:
     name: hazelcast
     labels:
       app: hazelcast
+      role: hazelcast
   spec:
     replicas: 3
     selector:
