--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/padogrid/padogrid-no-pvc.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/padogrid/padogrid-no-pvc.yaml
@@ -3,6 +3,7 @@ kind: Template
 labels:
   template: padogrid-template
   app: ${APP_NAME}
+  role: hazelcast
 metadata:
   annotations:
     description: PadoGrid
@@ -44,4 +45,4 @@ parameters:
   displayName: Hazelcast service
   name: HAZELCAST_SERVICE
   required: false
-  value: oc-helm-hazelcast
+  value: hazelcast
