--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/hazelcast/service-nodeport.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/hazelcast/service-nodeport.yaml
@@ -1,13 +1,15 @@
 apiVersion: v1  
 kind: Service  
 metadata:  
-  name: hazelcast-service-lb
+  name: hazelcast-service-nodeport
 spec:  
-  type: LoadBalancer  
+  type: NodePort
   selector:  
     app: hazelcast  
     role: hazelcast  
   ports:  
   - protocol: TCP  
     port: 5701  
-    nodePort: 30000
+    targetPort: 5701
+    nodePort: 30010
+
