Added create_grid for creating multiple clusters

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<maven.jar.plugin.version>2.4</maven.jar.plugin.version>
 		<maven.javadoc.plugin.version>3.1.0</maven.javadoc.plugin.version>
 		<maven.shade.plugin.version>3.2.2</maven.shade.plugin.version>
+		<skipTests>true</skipTests>
 	</properties>
 
 	<repositories>
