Replaced anyuid with nonroot scc

--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/padogrid/padogrid-no-pvc.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/padogrid/padogrid-no-pvc.yaml
@@ -25,6 +25,10 @@ objects:
         labels:
           name: ${APP_NAME}
       spec:
+        securityContext:
+          runAsUser: 1001
+          runAsGroup: 1001
+          fsGroup: 1001
         containers:
         - image: docker.io/padogrid/padogrid:latest
           name: padogrid
