--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/hazelcast/hazelcast.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/hazelcast/hazelcast.yaml
@@ -34,6 +34,7 @@ objects:
   data:
     hazelcast.yaml: |-
       hazelcast:
+        cluster-name: dev
         network:
           join:
             multicast:
