--- a/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/hazelcast/hazelcast-enterprise.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/k8s/openshift/templates/hazelcast/hazelcast-enterprise.yaml
@@ -45,6 +45,7 @@ objects:
   data:
     hazelcast.yaml: |-
       hazelcast:
+        cluster-name: dev
         network:
           join:
             multicast:
