Added -jar option for tools

--- a/padogrid-deployment/src/main/resources/geode/pado/etc/grid/pado.properties
+++ b/padogrid-deployment/src/main/resources/geode/pado/etc/grid/pado.properties
@@ -16,3 +16,9 @@ security.keystore.path=../../security/client/user.keystore
 security.keystore.alias=grid-user
 #security-keystorepass=grid-user
 security.keystore.pass=4R6Ghulw+kskOUROmjf9gQ==
+
+# Client application connection timeout in msec. Default: 900000 msec (15 min).
+# 86400000 msec (24 hours)
+# 604800000 msec (7 days)
+# 31536000000 msec (365 days)
+user.idle.timeout=86400000
