Added support for additional data structures for perf_test and synced up Hazelcast versions

--- a/padogrid-deployment/pom.xml
+++ b/padogrid-deployment/pom.xml
@@ -51,6 +51,13 @@
 			<artifactId>httpclient5</artifactId>
 			<version>5.0.1</version>
 		</dependency>
+		
+		<!-- JSR107 (Hazelcast)-->
+		<dependency>
+			<groupId>javax.cache</groupId>
+			<artifactId>cache-api</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
