--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-queue.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-queue.properties
@@ -33,7 +33,7 @@ hazelcast.logging.type=none
 # execute concurrently. Note that testCount applies per group. For example, if
 # testCount=2 and groupName=g1&g2,g3 then g1 and g2 execute concurrently twice
 # before g3 executes twice.
-groupNames=g1
+groupNames=g1,g2,g3,g4
 
 # -------------------------------------------------------------------------
 # Group:
@@ -57,12 +57,35 @@ groupNames=g1
 # comment     Any text describing the group. 
 # -------------------------------------------------------------------------
 
-# Invoke 22 get operations
-g1.name=Multi-Get
-g1.threadCount=500
-g1.operations=get1,get2,get3,get4,get5,get6,get7,get8,get9,get10,get11,get12,get13,get14,get15,get16,get17,get18,get19,get20,get21,get22
-g1.comment=Performs multi-get operations
+# g1 puts 100,000 1 KiB objects into queue1 defined by the 'queue1' operation.
+# Note that you can list more than one operations.
+g1.name=IQueue.offer() Test
+g1.threadCount=8
+g1.operations=offer1
+g1.comment=IQueue.offer() test (1 KiB payload in queue1)
 g1.totalInvocationCount=100000
+
+# g2 performs IQueue.peek()
+g2.name=IQueue.peek() Test
+g2.threadCount=8
+g2.operations=peek1
+g2.comment=IQueue.peek() test (1 KiB payload in queue1)
+g2.totalInvocationCount=100000
+
+# g3 performs IQueue.take()
+# Take a half of the queue items (50000) and let g4 poll the other half.
+g3.name=IQueue.take() Test
+g3.threadCount=1
+g3.operations=take1
+g3.comment=IQueue.take() test (1 KiB payload in queue1)
+g3.totalInvocationCount=50000
+
+# g4 performs IQueue.poll()
+g4.name=IQueue.poll() Test
+g4.threadCount=8
+g4.operations=poll1
+g4.comment=IQueue.poll() test (1 KiB payload in queue1)
+g4.totalInvocationCount=50000
 
 # -------------------------------------------------------------------------
 # Operations:
@@ -146,74 +169,19 @@ g1.totalInvocationCount=100000
 #                 Default: 1
 # -------------------------------------------------------------------------
 
-get1.map=map1
-get1.testCase=get
-get1.key.prefix=a
-get1.key.startNum=1
-# totalEntryCount for get must be less than or equal to the entry count in the map.
-# This value provides the key range when selecting keys randomly.
-get1.totalEntryCount=100000
-get1.randomSeed=1
+# offer1
+offer1.map=queue1
+offer1.testCase=offer
+offer1.payloadSize=1024
 
-get2.ref=get1
-get2.map=map2
+# peek1
+peek1.map=queue1
+peek1.testCase=peek
 
-get3.ref=get1
-get3.map=map3
+# take1
+take1.map=queue1
+take1.testCase=take
 
-get4.ref=get1
-get4.map=map4
-
-get5.ref=get1
-get5.map=map5
-
-get6.ref=get1
-get6.map=map6
-
-get7.ref=get1
-get7.map=map7
-
-get8.ref=get1
-get8.map=map8
-
-get9.ref=get1
-get9.map=map9
-
-get10.ref=get1
-get10.map=map10
-
-get11.ref=get1
-get11.map=map11
-
-get12.ref=get1
-get12.map=map12
-
-get13.ref=get1
-get13.map=map13
-
-get14.ref=get1
-get14.map=map14
-
-get15.ref=get1
-get15.map=map15
-
-get16.ref=get1
-get16.map=map16
-
-get17.ref=get1
-get17.map=map17
-
-get18.ref=get1
-get18.map=map18
-
-get19.ref=get1
-get19.map=map19
-
-get20.ref=get1
-get20.map=map20
-
-get21.ref=get1
-get21.map=map21
-
-get22.ref=get1
-get22.map=map22
+# poll1
+poll1.map=queue1
+poll1.testCase=poll
