--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-rtopic.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group-rtopic.properties
@@ -33,7 +33,7 @@ hazelcast.logging.type=none
 # execute concurrently. Note that testCount applies per group. For example, if
 # testCount=2 and groupName=g1&g2,g3 then g1 and g2 execute concurrently twice
 # before g3 executes twice.
-groupNames=g1
+groupNames=g1,g2
 
 # -------------------------------------------------------------------------
 # Group:
@@ -57,12 +57,20 @@ groupNames=g1
 # comment     Any text describing the group. 
 # -------------------------------------------------------------------------
 
-# Invoke 22 get operations
-g1.name=Multi-Get
-g1.threadCount=500
-g1.operations=get1,get2,get3,get4,get5,get6,get7,get8,get9,get10,get11,get12,get13,get14,get15,get16,get17,get18,get19,get20,get21,get22
-g1.comment=Performs multi-get operations
+# g1 publishes 100,000 1 KiB objects into topic1 defined by the 'publish1' operation.
+# Note that you can list more than one operations.
+g1.name=Reliable ITopic.publsh() Test
+g1.threadCount=8
+g1.operations=rpublish1
+g1.comment=Reliable ITopic.publish() test (1 KiB payload in topic1)
 g1.totalInvocationCount=100000
+
+# g2 performs ITopic.publishAll()
+g2.name=Reliable ITopic.publishAll() Test
+g2.threadCount=10
+g2.operations=rpublishall1
+g2.comment=Reliable ITopic.publishAll() test (1 KiB payload in topic2)
+g2.totalInvocationCount=1000
 
 # -------------------------------------------------------------------------
 # Operations:
@@ -72,7 +80,7 @@ g1.totalInvocationCount=100000
 #                 For example, if testCase is set to offer, then this parameter
 #                 defines the IQueue name. The parameter name, 'map', is misleading
 #                 but it keeps the original intent of supporting multiple IMDG products,
-#                 some of which may not support non-map data structures.
+#                 some of which may not have non-map data structures.
 #
 # ref             The test case reference name. The defining test case inherits
 #                 all values set by the referenced test case. Referenced properties
@@ -146,74 +154,13 @@ g1.totalInvocationCount=100000
 #                 Default: 1
 # -------------------------------------------------------------------------
 
-get1.map=map1
-get1.testCase=get
-get1.key.prefix=a
-get1.key.startNum=1
-# totalEntryCount for get must be less than or equal to the entry count in the map.
-# This value provides the key range when selecting keys randomly.
-get1.totalEntryCount=100000
-get1.randomSeed=1
+# rpublish1
+rpublish1.map=rtopic1
+rpublish1.testCase=rpublish
+rpublish1.payloadSize=1024
 
-get2.ref=get1
-get2.map=map2
-
-get3.ref=get1
-get3.map=map3
-
-get4.ref=get1
-get4.map=map4
-
-get5.ref=get1
-get5.map=map5
-
-get6.ref=get1
-get6.map=map6
-
-get7.ref=get1
-get7.map=map7
-
-get8.ref=get1
-get8.map=map8
-
-get9.ref=get1
-get9.map=map9
-
-get10.ref=get1
-get10.map=map10
-
-get11.ref=get1
-get11.map=map11
-
-get12.ref=get1
-get12.map=map12
-
-get13.ref=get1
-get13.map=map13
-
-get14.ref=get1
-get14.map=map14
-
-get15.ref=get1
-get15.map=map15
-
-get16.ref=get1
-get16.map=map16
-
-get17.ref=get1
-get17.map=map17
-
-get18.ref=get1
-get18.map=map18
-
-get19.ref=get1
-get19.map=map19
-
-get20.ref=get1
-get20.map=map20
-
-get21.ref=get1
-get21.map=map21
-
-get22.ref=get1
-get22.map=map22
+# rpublishall1
+rpublishall1.map=rtopic2
+rpublishall1.testCase=rpublishall
+rpublishall1.payloadSize=1024
+rpublishall1.batchSize=100
