--- a/hazelcast-addon-core-3/pom.xml
+++ b/hazelcast-addon-core-3/pom.xml
@@ -17,8 +17,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<hazelcast.version>3.12</hazelcast.version>
+		<hazelcast.version>3.12.10</hazelcast.version>
 		<spring.version>5.2.1.RELEASE</spring.version>
+		<avro.version>1.9.2</avro.version>
 		<skipTests>true</skipTests>
 	</properties>
 
@@ -28,21 +29,37 @@
 			<id>Hazelcast Private Release Repository</id>
 			<url>https://repository.hazelcast.com/release/</url>
 		</repository>
+		<repository>
+			<id>confluent</id>
+			<url>http://packages.confluent.io/maven/</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
-	
+
+		<dependency>
+			<groupId>padogrid.addon</groupId>
+			<artifactId>padogrid-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>padogrid.addon</groupId>
 			<artifactId>hazelcast-addon-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		
+
 		<!-- Hazelcast -->
 		<dependency>
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast-enterprise-all</artifactId>
 			<version>${hazelcast.version}</version>
+		</dependency>
+		
+		<!-- JSR107 -->
+		<dependency>
+			<groupId>javax.cache</groupId>
+			<artifactId>cache-api</artifactId>
+			<version>1.1.1</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
@@ -88,7 +105,7 @@
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.apache.kafka/connect-api -->
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
@@ -101,6 +118,39 @@
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.9.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.debezium/debezium-core -->
+		<dependency>
+			<groupId>io.debezium</groupId>
+			<artifactId>debezium-core</artifactId>
+			<version>1.2.0.Final</version>
+		</dependency>
+
+		<!-- Avro -->
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro</artifactId>
+			<version>${avro.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro-tools</artifactId>
+			<version>${avro.version}</version>
+		</dependency>
+
+		<!-- Confluent Kafka Connect Avro -->
+		<dependency>
+			<groupId>io.confluent</groupId>
+			<artifactId>kafka-connect-avro-data</artifactId>
+			<version>5.5.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20200518</version>
 		</dependency>
 	</dependencies>
 
