--- a/hazelcast-addon-core-4/pom.xml
+++ b/hazelcast-addon-core-4/pom.xml
@@ -15,7 +15,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<hazelcast.version>4.0</hazelcast.version>
+		<hazelcast.version>4.1</hazelcast.version>
 		<spring.version>5.2.1.RELEASE</spring.version>
 		<avro.version>1.9.2</avro.version>
 		<skipTests>true</skipTests>
@@ -51,6 +51,13 @@
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast-enterprise-all</artifactId>
 			<version>${hazelcast.version}</version>
+		</dependency>
+		
+		<!-- JSR107 -->
+		<dependency>
+			<groupId>javax.cache</groupId>
+			<artifactId>cache-api</artifactId>
+			<version>1.1.1</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
