--- a/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group.properties
+++ b/padogrid-deployment/src/main/resources/hazelcast/apps/perf_test/etc/group.properties
@@ -58,7 +58,7 @@ groupNames=g1&g2,g3&g4
 # -------------------------------------------------------------------------
 
 # g1 puts 100,000 1 KiB objects into map1 defined by the 'put1' operation.
-# Note that you can list more than one operations.
+# Note that you can list more than one operation.
 g1.name=Put Test
 g1.threadCount=8
 g1.operations=put1
@@ -72,13 +72,14 @@ g2.operations=putall1
 g2.comment=IMap.putAll() test (1 KiB payload in map2)
 g2.totalInvocationCount=1000
 
-# g3 gets 10
+# g3 invokes IMap.get() 100,000 times
 g3.name=Get Test
 g3.threadCount=8
 g3.operations=get1
 g3.comment=IMap.get() test (1 KiB payload from map1)
 g3.totalInvocationCount=100000
 
+# g4 invokes IMap.getAll() 
 g4.name=GetAll Test
 g4.threadCount=8
 g4.operations=getall1
@@ -88,6 +89,13 @@ g4.totalInvocationCount=10000
 # -------------------------------------------------------------------------
 # Operations:
 #
+# map             Data structure name. This parameter specifies the name of 
+#                 the data structure pertaining to the specified test case.
+#                 For example, if testCase is set to offer, then this parameter
+#                 defines the IQueue name. The parameter name, 'map', is misleading
+#                 but it keeps the original intent of supporting multiple IMDG products,
+#                 some of which may not support non-map data structures.
+#
 # ref             The test case reference name. The defining test case inherits
 #                 all values set by the referenced test case. Referenced properties
 #                 are overwritten if defined.
@@ -95,8 +103,16 @@ g4.totalInvocationCount=10000
 # testCase        Test case.
 #                 If invalid values are entered then the default value is assigned.
 #
-#                 Valid Test Cases: set, get, getall, get, getall.                 
-#                 Default: getall                
+#                 Valid Test Cases: 
+#                   - IMap: set, get, getall, put, putall
+#                   - ICache: cget, cgetall, cput, cputall
+#                   - *ReplicatedMap: rget, rput, rputall
+#                   - IQueue: offer, peek, poll, take
+#                   - ITopic: publish, **publishall
+#                 Default: putall                
+#
+#                 * There is no getall API support for ReplicatedMap.
+#                 ** ITopic.publishAll() is a new API only available in Hazelcast 4.1+.
 #
 # payloadSize     The value object size in bytes. The value object is a blob
 #                 object containing the specified payload size in the form of
@@ -104,19 +120,21 @@ g4.totalInvocationCount=10000
 #                 the prefix defined by the key.prefix property. This property is
 #                 used by the following test cases only.
 #
-#                 Used By: set, put, putall
+#                 Used By: set, put, putall, cput, cputall, rput, rputall, offer, publish, publishall
 #                 Default: 1024
 #
 # batchSize       The number of objects per putAll() or getAll() call per thread.
 #
-#                 Used By: putall, getall
+#                 Used By: getall, putall, cgetall, cputall, rputall, publishall
 #                 Default: 100
 #
-# totalEntryCount The total number of entries is used by putall, getall, and get.
+# totalEntryCount The total number of entries. 
 #
-#                 - For putall and getall, this value dictates the upper bound of
-#                   the entry count. The number of objects inserted will be less
-#                   than or equal to this value. To insert the exact number of entries
+#                 - For putall, getall and publishall, this value dictates the upper bound
+#                   of the entry count. The number of objects inserted will be less
+#                   than or equal to this value. To keep the upper bound, the keys are generated
+#                   in a round-robin fashion to perform updates instead of inserts if the entry
+#                   count reaches the upper limit. To insert the exact number of entries
 #                   defined by totalEntryCount, the following must hold true:
 #
 #                      totalEntryCount = totalInvocationCount * batchSize
@@ -127,18 +145,26 @@ g4.totalInvocationCount=10000
 #
 #                       totalEntryCount >= key-number
 #
-#                 Used By: putall, getall, get
+#                 *Used By: putall, getall, get, cget, cgetall, cputall, rget, rputall
 #                 Default: 10000
 #
-# key.prefix      Key names begin with this value.
+#                 * Note that totalEntryCount is not used by publishall since unlike IMap, ICache
+#                   and ReplicatedMap, ITopic (and IQueue) cannot update data. It can only append
+#                   data and therefore the entry count cannot be fixed.
 #
+# key.prefix      Key names begin with this value. This parameter is optional and used by IMap, ICache,
+#                 and ReplicatedMap.
+#
+#                 Used By: set, get, getall, put, putall, cput, cputall, cget, cgetall, rget, rput, rputall
 #                 Default: k
 #
 # key.startNum    Key start number. Each key name stars with the prefix defined by
 #                 the key.prefix property followed by a number that is increased
 #                 incrementally starting from this value. For example, 
-#                 key.prefix=a and key.startNum=10 produces the first key name, "a10".
+#                 key.prefix=a and key.startNum=10 produces the first key name, "a10". This parameter is
+#                 used by IMap, ICache, and ReplicatedMap.
 #
+#                 Used By: set, get, getall, put, putall, cput, cputall, cget, cgetall, rget, rput, rputall
 #                 Default: 1
 # -------------------------------------------------------------------------
 
