Added confuent kafka for Hazelcast 3 build

--- a/padogrid-all/padogrid-hazelcast-all-3/pom.xml
+++ b/padogrid-all/padogrid-hazelcast-all-3/pom.xml
@@ -27,10 +27,22 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<geode.version>1.11.0</geode.version>
 		<spring.version>5.2.1.RELEASE</spring.version>
+		<avro.version>1.9.2</avro.version>
 		<skipTests>true</skipTests>
 	</properties>
+
+	<repositories>
+		<!-- Hazelcast private repo -->
+		<repository>
+			<id>Hazelcast Private Release Repository</id>
+			<url>https://repository.hazelcast.com/release/</url>
+		</repository>
+		<repository>
+			<id>confluent</id>
+			<url>http://packages.confluent.io/maven/</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
@@ -154,6 +166,39 @@
 			<groupId>padogrid.addon</groupId>
 			<artifactId>hazelcast-addon-core-3</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/io.debezium/debezium-core -->
+		<dependency>
+			<groupId>io.debezium</groupId>
+			<artifactId>debezium-core</artifactId>
+			<version>1.2.0.Final</version>
+		</dependency>
+
+		<!-- Avro -->
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro</artifactId>
+			<version>${avro.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro-tools</artifactId>
+			<version>${avro.version}</version>
+		</dependency>
+
+		<!-- Confluent Kafka Connect Avro -->
+		<dependency>
+			<groupId>io.confluent</groupId>
+			<artifactId>kafka-connect-avro-data</artifactId>
+			<version>5.5.0</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20200518</version>
 		</dependency>
 	</dependencies>
 
